--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,8 @@
 
 
 .item {
-  padding-top:1em;
+  margin-top:1em;
+  border-top: 1px solid #ddd
 }
 
 .room .form-inline {
@@ -29,4 +30,14 @@
 
 .form-inline {
   padding: 1em 0;
+}
+
+.itemTitle {
+  display: inline-block;
+  width:calc(100% - 100px);
+}
+.dropdown {
+  width: 100px;
+  display: inline-block;
+
 }
