"add room names in dropdowns"

--- a/views/index.jade
+++ b/views/index.jade
@@ -21,7 +21,7 @@ html(lang="en")
                     h4.itemTitle= item.name
                     .dropdown
                       button#dropdownMenu1.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='true')
-                        | Dropdown
+                        | Put in room:
                         span.caret
                       ul.dropdown-menu(aria-labelledby='dropdownMenu1')
                         li
@@ -62,18 +62,14 @@ html(lang="en")
               .item(data-mongoid= item._id.toString())
                 h4.itemTitle= item.name
                 .dropdown
-                  button#dropdownMenu1.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='true')
-                    | Dropdown
+                  button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='true')
+                    | Put it in a room
                     span.caret
                   ul.dropdown-menu(aria-labelledby='dropdownMenu1')
-                    li
-                      a(href='#') Action
-                    li
-                      a(href='#') Another action
-                    li
-                      a(href='#') Something else here
-                    li
-                      a(href='#') Separated link
+                    if rooms[0]
+                      each room in rooms
+                        li
+                          a(href='#' data-mongoid= room._id.toString())= room.name
                 li.list-item= "description: " + item.description
                 li.list-item= "price: $" + item.value
                 .form-inline.itemForm
