--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,6 @@
   cursor: pointer;
 }
 
-
 .item {
   margin-top:1em;
   border-top: 1px solid #ddd
@@ -39,4 +38,13 @@
 .dropdown {
   width: 100px;
   display: inline-block;
+}
+
+#sample{
+  display: none;
+}
+
+.item > li {
+  font-size: 14px;
+  font-weight: normal;
 }
