--- a/views/index.jade
+++ b/views/index.jade
@@ -29,7 +29,7 @@ html(lang="en")
                             li.roomSelect
                               a(href='#!' data-mongoid= room._id.toString())= room.name
                     li.list-item= "description: " + item.description
-                    li.list-item= "price: $" + item.value
+                    li.list-item= "value: $" + item.value
                     .form-inline.itemForm
                       h4 Edit Item
                       .form-group
@@ -50,37 +50,38 @@ html(lang="en")
                   input.roomName
                 .form-group
                   button.btn.editRoom Save Edit
+
       .jumbotron
         h2 Loose Items
-        .room(data-mongoid= 0)
-          if items[0]
-            each item in items
-              .item(data-mongoid= item._id.toString())
-                h4.itemTitle= item.name
-                .dropdown
-                  button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='true')
-                    | Put it in a room
-                    span.caret
-                  ul.dropdown-menu(aria-labelledby='dropdownMenu1')
-                    if rooms[0]
-                      each room in rooms
-                        li.roomSelect
-                          a(href='#!' data-mongoid= room._id.toString())= room.name
-                li.list-item= "description: " + item.description
-                li.list-item= "price: $" + item.value
-                .form-inline.itemForm
-                  h4 Edit
-                  .form-group
-                    label(for=itemName type="text") Name
-                    input.itemName
-                  .form-group
-                    label(for=itemValue type="number") Value
-                    input.itemValue
-                  .form-group
-                    label(for=itemDescrip type="text") Description
-                    input.itemDescrip
-                  .form-group
-                    button.btn.editItem  Save Edit
+          .room#looseItems(data-mongoid= 0)
+            if items[0]
+              each item in items
+                .item(data-mongoid= item._id.toString())
+                  h4.itemTitle= item.name
+                  .dropdown
+                    button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='true')
+                      | Put it in a room
+                      span.caret
+                    ul.dropdown-menu(aria-labelledby='dropdownMenu1')
+                      if rooms[0]
+                        each room in rooms
+                          li.roomSelect
+                            a(href='#!' data-mongoid= room._id.toString())= room.name
+                  li.list-item= "description: " + item.description
+                  li.list-item= "value: $" + item.value
+                  .form-inline.itemForm
+                    h4 Edit Item
+                    .form-group
+                      label(for=itemName type="text") Name
+                      input.itemName
+                    .form-group
+                      label(for=itemValue type="number") Value
+                      input.itemValue
+                    .form-group
+                      label(for=itemDescrip type="text") Description
+                      input.itemDescrip
+                    .form-group
+                      button.btn.editItem  Save Edit
 
       .jumbotron
         .form-inline.itemForm
@@ -105,6 +106,32 @@ html(lang="en")
           .form-group
             button.btn.addRoom Add Room
 
+    .item#sample
+      h4.itemTitle= test
+      .dropdown
+        button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='true')
+          | Put it in a room
+          span.caret
+        ul.dropdown-menu(aria-labelledby='dropdownMenu1')
+          if rooms[0]
+            each room in rooms
+              li.roomSelect
+                a(href='#!' data-mongoid= room._id.toString())= room.name
+      li.list-item.descrip= "description: "
+      li.list-item.value= "value: $"
+      .form-inline.itemForm
+        h4 Edit Item
+        .form-group
+          label(for=itemName type="text") Name
+          input.itemName
+        .form-group
+          label(for=itemValue type="number") Value
+          input.itemValue
+        .form-group
+          label(for=itemDescrip type="text") Description
+          input.itemDescrip
+        .form-group
+          button.btn.editItem  Save Edit
     script(src='bower_components/jquery/dist/jquery.min.js')
     script(src='bower_components/bootstrap/dist/js/bootstrap.min.js')
     script(src="bower_components/sweetalert/dist/sweetalert.min.js")
