"fix clear form on add item and label unroomed items to Loose Items"

--- a/views/index.jade
+++ b/views/index.jade
@@ -53,7 +53,7 @@ html(lang="en")
                   button.btn.editRoom Save Edit
 
       .jumbotron
-        h2 All Items
+        h2 Loose Items
           .room#looseItems(data-mongoid= 0)
             if items[0]
               each item in items
